assets/css/style.css
/* ... */
.social-links li a i:hover {
  background: #4b5582;
  box-shadow: 2px 2px 5px 3px rgba(129, 75, 112, 0.6);
}

/*--above section with social icons code came from the cv assignment lesson in the code institute LMS --*/

.copyright{
    padding: 10px;
    margin-top: 10px;
}

.copyright a{
    font-size: 12px;
    color: #4b5582;
    -o-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.copyright a:hover{
    text-decoration: none;
    color: #4b5582;
    text-shadow: 8px 8px 4px rgba(129, 75, 112, 1);
}

/*--------------------------------------------------------media queries---------------------------------------------*/

/*--------------------------------------------------------media queries mobile screens*/

@media screen and (min-width: 320px){
    .profile-pic{
        width: 0px;
        height: 0px;
    }
    .hero-text{
        font-size: 20px;
    }
    .hero-image{
        height: 200px;
    }
    .background-deco{
        width: 300px;
        height: 300px;
        top: -250px;
        left: -50px;
    }
    .social-links{
        padding: 15px 5px 10px 5px;
    }
    .reference-titel{
        padding-left: 20px;
    }
    .recipe-pic{
        position: relative;
        top: -10px;
        width: 300px;
        height: 100px;
        background-size: cover;
        background-repeat: no-repeat;
    }
    .recipe-section{
        margin-top: 20px;
    }
    .social-contact li{
        margin: 10px;
    }
}

/*--------------------------------------------------------media queries medium screens*/

@media screen and (min-width: 720px){
    .profile-pic{
        width: 200px;
        height: 200px;
    }
    .hero-text{
        font-size: 30px;
    }
    .hero-image{
        height: 250px;
    }
    .background-deco{
        top: -300px;
        width: 500px;
        height: 600px; 
    }
    .social-links{
        padding: 15px 20px 10px 5px;
    }
    .butterfly-background{
        width: 400px;
        height: 400px;
        left: -100px;
    }
    .recipe-pic{
        position: relative;
        width: 300px;
        height: 300px;
        background-size: contain;
        background-repeat: no-repeat;
    }
    .recipe-section{
        margin: 60px 0px 20px 0px;
    }
    .reference-logo-1,.reference-logo-2{
        width: 70px;
        height: 70px;
    }
    .text-block-over-kim{
        margin-top: 40px;
    }
    .profile-pic-contact{
        width: 150px;
        height: 150px;
        border: 1px solid #000;
        border-radius: 50%;
        background-repeat: no-repeat;
        background-size: cover;
        box-shadow: 10px 10px 14px 8px rgba(0, 0, 0, 0.4);
    }
    .contact-background{
        top: 650px;
        left: -100;
        height: 300px;
        width: 300px;
    }
    .social-contact li{
        margin: 0px 20px;
    }
    .over-kim-background{
    width: 600px;
    height: 600px;
}
}

@media screen and (max-width: 540px){
    .navbar-brand h1{
        font-size: 20px;
    }
    .nav-background{
        height: 35px;
    }
}

/*--------------------------------------------------------media queries large screens*/

@media screen and (min-width: 992px){
    .profile-pic{
        width: 260px;
        height: 260px;
    }
    .hero-text{
        font-size: 40px;
    }
    .hero-image{
        height: 300px;
    }
    .call-to-action{
        top: -50px;
        margin-bottom: 20px;
    }
    .recipe-pic{
        position: relative;
        width: 200px;
        height: 200px;
        background-size: contain;
        background-repeat: no-repeat;
    }
    .reference-logo-1,.reference-logo-2{
        width: 80px;
        height: 80px;
    }
    .text-block-over-kim{
        margin-top: 70px;
    }
    .contact-background{
        position: absolute;
        background-image: url(../images/transparant-vlinder-dessert.png);
        z-index: 10;
        top: 550px;
        left: -100px;
        width: 600px;
        height: 600px;
        opacity: 0.5;
        background-size: contain;
        background-repeat: no-repeat;
    } 
}

/*--------------------------------------------------------media queries larger screens*/

@media screen and (min-width: 1366px){
    .contact-background{
        width: 600px;
        height: 600px;
        left: -150px;
    }
    .text-block-over-kim{
        padding: 40px;
    }
    .text-block-over-kim p{
        font-size: 18px;
    }
}

@media screen and (min-height: 1366px){
    .contact-background{
        top: 750px;
    }
}

